# python

./: .gitignore  pyproject.toml
develop/checks/pre-commit-check/: default.nix
develop/lib/module/: default.nix
develop/shells/default/: default.nix
src/example/: main.py
