[project]
name = "example"
version = "0.1.0"
# dynamic = ["version"]
description = "Example project"
# readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
example = "example.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
